--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment: 
-  sdk: '>=3.6.0 <4.0.0'
+  sdk: ^3.6.1
 
 dependencies: 
   flutter: 
@@ -12,26 +12,26 @@ dependencies:
     sdk: flutter
   collection: ^1.18.0
   cupertino_icons: ^1.0.8
-  dio: ^5.7.0
+  dio: ^5.8.0+1
   equatable: ^2.0.7
   extended_image: ^9.1.0
-  flutter_bloc: ^8.1.6
-  flutter_svg: ^2.0.16
+  flutter_bloc: ^9.0.0
+  flutter_svg: ^2.0.17
   get_it: ^8.0.3
-  go_router: ^14.6.3
+  go_router: ^14.8.0
   intl: ^0.19.0
   json_annotation: ^4.9.0
   pretty_dio_logger: ^1.4.0
-  shared_preferences: ^2.3.5
+  shared_preferences: ^2.5.1
 
 dev_dependencies: 
   flutter_lints: ^5.0.0
   flutter_test: 
     sdk: flutter
   build_runner: ^2.4.14
-  flutter_gen_runner: ^5.8.0
-  json_serializable: ^6.9.2
-  mockito: ^5.4.4
+  flutter_gen_runner: ^5.9.0
+  json_serializable: ^6.9.3
+  mockito: ^5.4.5
   
 
 flutter: 
