--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ dependencies:
   json_annotation: ^4.9.0
   pretty_dio_logger: ^1.4.0
   shared_preferences: ^2.5.1
+ 
 
 dev_dependencies: 
   flutter_lints: ^5.0.0
   flutter_test: 
     sdk: flutter
+  bloc_test: ^10.0.0
   build_runner: ^2.4.14
   flutter_gen_runner: ^5.9.0
   json_serializable: ^6.9.3
