--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,7 +4,11 @@ linter:
   rules:
     always_use_package_imports: true
     always_declare_return_types: true
+    avoid_init_to_null: true
     avoid_print: true
+    prefer_const_constructors: true
+    prefer_const_constructors_in_immutables: true
+    prefer_const_literals_to_create_immutables: true
     prefer_is_empty: true
     prefer_is_not_empty: true
     prefer_is_not_operator: true
@@ -13,22 +17,24 @@ linter:
     unnecessary_overrides: false
     avoid_function_literals_in_foreach_calls: false
     unrelated_type_equality_checks: true
-    prefer_const_literals_to_create_immutables: true
 
 analyzer:
   exclude:
     - "**/*.g.dart"
+    - lib/generated/*
   errors:
     always_use_package_imports: error
     always_declare_return_types: error
+    avoid_init_to_null: error
     avoid_print: error
+    prefer_const_constructors: error
+    prefer_const_constructors_in_immutables: error
+    prefer_const_literals_to_create_immutables: error
     prefer_is_empty: error
     prefer_is_not_empty: error
     prefer_is_not_operator: error
-    prefer_single_quotes: error
+    prefer_single_quotes: error 
     require_trailing_commas: error
     unrelated_type_equality_checks: error
     unused_element: error
-    prefer_const_literals_to_create_immutables: error
     unused_local_variable: error
-    invalid_use_of_protected_member: ignore
